@startuml

title Gestione Scuderia DAO - Class Diagram UML

package DAO{
  class DAOFactory << (S,Violet) singleton >>{
    - {static} DAOFactory instance 
    - DbType dbType
    - DAOFactory(DbType dbType)
    + {static} void createInstance (DbType  dbType)
    + {static} UserDAO createUserDAO() 
  }

  enum DbType {
    MYSQL
  }
}

package DAO.mysql{
  class DBConnection{
    - {static} String PROPERTYDBDRIVER
    - {static} String PROPERTYDBURL
    - {static} String dbDriver 
    - {static} String dbURL 
    - {static} boolean isInit 
    - Connection conn
    - static void init()
    + DBConnection(String schema)
    + void close()
    + Connection getConnection()
    + boolean isOpen() 
  }
  
  class WarehousemanDAO{
    - String SCHEMA
    + void checkCompo(String id_c)
    + void checkRequest(String id_s, String id_c, String id_v)
    + int countElement()
    + int countElementBySelect(String select)
    + void  insertLogEvent(String id_staff, String desc)
    + void removeRequest(String idc)
    + Set<Request> selectAllRequest()
    + boolean updateComponent(String id, String wear, String status
  }

  class MechanicDAO{
    - String SCHEMA
    + void checkCompo(String id_c, String name, String status)
    + void checkIdCompo(String id_c)
    + void checkPilot(String id_p)
    + boolean checkPilotOnVehicle(String idp)
    + void checkRequest(String id_c)
    + void checkStaff(String id)
    + void checkVehicle(String msn)
    + boolean insertComponent(String id, String msn)
    + void  insertLogEvent(String id_staff, String desc)
    + boolean insertMeccOnVehicle(String msn, String id)
    + boolean insertPilotOnVehicle(String id_p, String msn)
    + boolean insertRequest(String desc, String id_s, String id_c, String id_v)
    + void removeComponent(String id_c, String id_v)
    + boolean removePilot(String idp)
    + void selectP(String id, String name, String surname, String number)
    + boolean updateWear(int wear, String id)
  }

  class StrategistDAO {
    - {static} String SCHEMA
    + void  insertLogEvent(String id_staff, String desc)
    + void checkVehicle(String msn)
    + void insertStrategistOnVehicle(String msn, String id) 
  }

  class UserDAO {
    - {static} String SCHEMA
    + {static} TypeController selectByIDandPwd(String id, String pwd)
    + Staff selectById(String id)
  }
  
  class VehicleDAO {
    - {static} String SCHEMA
    + boolean timeSector(Vehicle v)
  }
}

DAOFactory -* DbType
DBConnection -up.|> AutoClosable
ControllerManager -- DAOFactory

WarehousemanDAO -- WhPopUpUpdateComponentHandler
WarehousemanDAO -- WhPopUpDeleteRequestHandler

MechanicDAO -- McPopUpPilotHandler
MechanicDAO -- McPopUpVehicleHandler
MechanicDAO -- McPopUpRequestHandler
MechanicDAO -- McPopUpComponentHandler

StrategistDAO -- StPopUpCreateStrategyHandler
VehicleDAO -- StrategistControllere

@enduml